# ratatui-system

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  log4rs.yaml
src/: main.rs
src/db/: dbutils.rs  mod.rs
