[package]
edition = "2024"
name = "ratatui-x-table"
version = "0.1.0"

[dependencies]
clap = {version = "4", features = ["cargo"]}
crossterm = "0.28.1"
itertools = "0.14.0"
ratatui = "0.29.0"
thiserror = "2.0.12"
tokio = {version = "1", features = ["full"]}
unicode-width = "0.2.0"
#palette = "0.7.3"
fakeit = "1.1"
color-eyre = "0.6.3"

[dev-dependencies]
anyhow = "1"
